quick https fix

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <title>VLTE BROWSER</title>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="https://www.google.com/jsapi"></script>
 <script src="d3/d3.min.js"></script>
 <script src="https://d3js.org/d3.v5.min.js"></script>
