--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<link rel='stylesheet' href='css/VLTE_plotter.css' />
+<link rel='stylesheet' href='./css/VLTE_plotter.css' />
 
 <title>SCIENCE ACTION</title>
 
