making paths absolute

--- a/exp_evo_browser/index.html
+++ b/exp_evo_browser/index.html
@@ -1,16 +1,16 @@
 <html>
 
 <head>
-<link rel='stylesheet' href='./css/VLTE_plotter.css' />
+<link rel='stylesheet' href='/exp_evo_browser/css/VLTE_plotter.css' />
 
 <title>SCIENCE ACTION</title>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="https://www.google.com/jsapi"></script>
-<script src="d3/d3.min.js"></script>
+<script src="/exp_evo_browser/d3/d3.min.js"></script>
 <script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="js/genome_browser.js"></script>
-<script src="js/VLTE_plotter.js"></script>
+<script src="/exp_evo_browser/js/genome_browser.js"></script>
+<script src="/exp_evo_browser/js/VLTE_plotter.js"></script>
 
 <meta charset="UTF-8">
     
