adding redirect, changing site title

--- a/exp_evo_browser/index.html
+++ b/exp_evo_browser/index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel='stylesheet' href='/exp_evo_browser/css/VLTE_plotter.css' />
 
-<title>SCIENCE ACTION</title>
+<title>Exp-Evo Browser</title>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="https://www.google.com/jsapi"></script>
